--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,24 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        // Gradle plugin e dependências do Kotlin
+        classpath "com.android.tools.build:gradle:8.1.1"  // Ajuste a versão para 8.1.1
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.10"  // Defina a versão do Kotlin aqui
+    }
+}
+
+plugins {
+    // Remover a versão do Kotlin plugin e apenas aplicar o plugin
+    id 'com.android.application' apply false
+    id 'com.android.library' apply false
+    id 'org.jetbrains.kotlin.android' apply false  // Não especificar a versão aqui
+}
+
 allprojects {
     repositories {
         google()
@@ -5,24 +26,29 @@ allprojects {
     }
 }
 
-rootProject.buildDir = '../build'
+rootProject.buildDir = "../build"
+
 subprojects {
-    afterEvaluate { project ->
-        if (project.plugins.hasPlugin("com.android.application") ||
-                project.plugins.hasPlugin("com.android.library")) {
-            project.android {
-                compileSdkVersion 34
-            }
+    project.buildDir = "${rootProject.buildDir}/${project.name}"
+    afterEvaluate {
+        // Evitar conflitos ao avaliar projetos
+        tasks.matching { it.name.contains("lint") }.configureEach {
+            enabled = false // Desabilite Lint, se necessário
         }
     }
 }
-subprojects {
-    project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
-    project.evaluationDependsOn(':app')
+
+tasks.register("clean", Delete) {
+    delete rootProject.buildDir
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+// Adicionar uma tarefa para criar um baseline do lint (se necessário)
+tasks.register("generateLintBaseline") {
+    group = "verification"
+    description = "Generate lint baseline file."
+    doLast {
+        exec {
+            commandLine "./gradlew", "lintDebug", "--write-baseline"
+        }
+    }
 }
