--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,6 @@
 org.gradle.jvmargs=-Xmx6144m
 android.useAndroidX=true
 android.enableJetifier=true
-android.enableR8=true
+android.suppressUnsupportedCompileSdk=34
+
+#android.enableR8=true
