--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,58 +23,62 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.4
+  dio: ^5.7.0
   flutter_localizations:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
+  flutter_test:
+    sdk: 1.17.1
   auto_size_text: 3.0.0
   cached_network_image: 3.4.1
   cached_network_image_platform_interface: 4.1.1
   cached_network_image_web: 1.3.1
   collection: 1.18.0
   dropdown_button2: 2.3.9
-  easy_debounce: 2.0.1
+  easy_debounce: ^2.0.3
   expandable: 5.0.1
   flutter_animate: 4.5.0
   flutter_cache_manager: 3.4.1
   flutter_rating_bar: 4.0.1
-  font_awesome_flutter: 10.7.0
+  font_awesome_flutter: ^10.8.0
   from_css_color: 2.0.0
-  go_router: 12.1.3
-  google_fonts: 6.1.0
+  go_router: ^14.6.0
+  google_fonts: ^6.2.1
   intl: 0.19.0
   intl_phone_field: ^3.1.0
-  json_path: 0.7.2
+  json_path: ^0.7.4
   mask_text_input_formatter: 2.9.0
   page_transition: 2.1.0
-  path_provider: 2.1.4
-  path_provider_android: 2.2.10
+  path_provider: ^2.1.5
+  path_provider_android: 2.2.12
   path_provider_foundation: 2.4.0
   path_provider_linux: 2.2.1
   path_provider_platform_interface: 2.1.2
-  path_provider_windows: 2.2.1
+  path_provider_windows: ^2.3.0
   pin_code_fields: 8.0.1
   provider: 6.1.2
-  shared_preferences: 2.3.2
-  shared_preferences_android: 2.3.2
-  shared_preferences_foundation: 2.5.2
+  shared_preferences: ^2.3.3
+  shared_preferences_android: ^2.3.3
+  shared_preferences_foundation: ^2.5.3
   shared_preferences_linux: 2.4.1
   shared_preferences_platform_interface: 2.4.1
   shared_preferences_web: 2.4.2
   shared_preferences_windows: 2.4.1
-  smooth_page_indicator: 1.1.0
-  sqflite: 2.3.3+1
-  sqflite_common: 2.5.4+3
-  stop_watch_timer: 3.0.2
-  timeago: 3.6.1
-  url_launcher: 6.3.0
-  url_launcher_android: 6.3.10
+  smooth_page_indicator: ^1.2.0+3
+  sqflite: ^2.4.1
+  sqflite_common: ^2.5.4+5
+  stop_watch_timer: ^3.2.1
+  timeago: ^3.7.0
+  url_launcher: 6.3.1
+  url_launcher_android: ^6.3.14
   url_launcher_ios: 6.3.1
-  url_launcher_linux: 3.2.0
+  url_launcher_linux: ^3.2.1
   url_launcher_macos: 3.2.1
-  url_launcher_platform_interface: 2.3.2
-  url_launcher_web: 2.3.3
-  url_launcher_windows: 3.1.2
+  #url_launcher_platform_interface: ^3.1.0
+  #url_launcher_web: 2.3.3
+  #url_launcher_windows: 3.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -83,12 +87,9 @@ dependencies:
 dependency_overrides:
   http: 1.2.2
   uuid: ^4.0.0
-
-dev_dependencies:
-  flutter_lints: 4.0.0
-  lints: 4.0.0
   flutter_test:
-    sdk: flutter
+    sdk: flutter  # Atualize para a versão compatível
+  collection: ^1.18.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
