--- a/android/build.gradle
+++ b/android/build.gradle
@@ -14,8 +14,8 @@ buildscript {
 
 plugins {
     // Remover a versão do Kotlin plugin e apenas aplicar o plugin
-    id 'com.android.application' apply false
-    id 'com.android.library' apply false
+    id 'com.android.application' version '8.1.1' apply false
+    id 'com.android.library' version '8.1.1' apply false
     id 'org.jetbrains.kotlin.android' apply false  // Não especificar a versão aqui
 }
 
